sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: ';' expected but 'else' found.
    else {
    ^AlgGnomeSort:20: error: Unmatched closing brace '}' ignored here
}
^